--- a/src/app/home-page/admin-login/admin-login.component.html
+++ b/src/app/home-page/admin-login/admin-login.component.html
@@ -14,7 +14,7 @@
           <button type="submit" class="btn btn-primary">Login</button>
         </div>
         <div class="d-grid">
-            <button class="btn btn-success mt-2">Register</button>
+            <a class="btn btn-success mt-2" [routerLink]="['../','admin-register']">Register</a>
             <span class="text-blue">New Admin Register here</span>
           </div>
       </form>
