--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -4,7 +4,7 @@
       <div class="col-md-6 d-flex align-items-center justify-content-center">
         <div class="col-md-6 d-flex flex-column align-items-center justify-content-center">
             <div class="mb-4">
-              <div class="btn-group">
+              <div class="btn-group" *ngIf=" !isRegistration">
                 <a href="#" class="btn border-dark border-1 mr-4" routerLink="student-login" [routerLinkActive]="['border-primary','border-3']">Student</a>
                 <a href="#" class="btn border-dark border-1 mr-4" routerLink="admin-login" [routerLinkActive]="['border-primary','border-3']">Admin </a>
               </div>
