--- a/src/app/home-page/student-login/student-login.component.html
+++ b/src/app/home-page/student-login/student-login.component.html
@@ -14,7 +14,7 @@
           <button type="submit" class="btn btn-primary">Login</button>
         </div>
         <div class="d-grid">
-          <button class="btn btn-success mt-2">Register</button>
+          <a class="btn btn-success mt-2" [routerLink]="['../','student-register']">Register</a>
           <span class="text-blue">New student Register here</span>
         </div>
       </form>
