student and admin dashboard added

--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,37 @@
-<p>admin-dashboard works!</p>
+<div class="container-fluid">
+    <div class="row">
+      <div class="col-md-2 sidebar p-0">
+        <div class="container">
+            <H3>Welcome Admin</H3>
+        </div>
+        <div class="list-group">
+          <a href="#" class="list-group-item list-group-item-action sidebar-link active">
+            <i class="fas fa-tachometer-alt"></i>
+            <span>Dashboard</span>
+          </a>
+          <a href="#" class="list-group-item list-group-item-action sidebar-link">
+            <i class="fas fa-users"></i>
+            <span>Users</span>
+          </a>
+          <a href="#" class="list-group-item list-group-item-action sidebar-link">
+            <i class="fas fa-box"></i>
+            <span>Products</span>
+          </a>
+          <a href="#" class="list-group-item list-group-item-action sidebar-link">
+            <i class="fas fa-shopping-cart"></i>
+            <span>Orders</span>
+          </a>
+          <a href="#" class="list-group-item list-group-item-action sidebar-link">
+            <i class="fas fa-cog"></i>
+            <span>Settings</span>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-10">
+        <div class="p-3">
+          <h2>Dashboard</h2>
+          <p>Welcome to your dashboard! This is the main content area.</p>
+        </div>
+      </div>
+    </div>
+  </div>
