--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -7,23 +7,18 @@
         <div class="list-group">
           <a href="#" class="list-group-item list-group-item-action sidebar-link active">
             <i class="fas fa-tachometer-alt"></i>
-            <span>Dashboard</span>
+            <span>Create Exam</span>
           </a>
           <a href="#" class="list-group-item list-group-item-action sidebar-link">
             <i class="fas fa-users"></i>
-            <span>Users</span>
+            <span>View Results</span>
           </a>
           <a href="#" class="list-group-item list-group-item-action sidebar-link">
             <i class="fas fa-box"></i>
-            <span>Products</span>
-          </a>
-          <a href="#" class="list-group-item list-group-item-action sidebar-link">
-            <i class="fas fa-shopping-cart"></i>
-            <span>Orders</span>
-          </a>
-          <a href="#" class="list-group-item list-group-item-action sidebar-link">
+            <span>Log Out</span>
+          </a> <a href="#" class="list-group-item list-group-item-action sidebar-link">
             <i class="fas fa-cog"></i>
-            <span>Settings</span>
+            <span>Manage Profile</span>
           </a>
         </div>
       </div>
