--- a/src/app/student-dashboard/student-dashboard.component.html
+++ b/src/app/student-dashboard/student-dashboard.component.html
@@ -7,24 +7,21 @@
         <div class="list-group">
           <a href="#" class="list-group-item list-group-item-action sidebar-link active">
             <i class="fas fa-tachometer-alt"></i>
-            <span>Dashboard</span>
+            <span>Attend Exam</span>
           </a>
           <a href="#" class="list-group-item list-group-item-action sidebar-link">
             <i class="fas fa-users"></i>
-            <span>Users</span>
+            <span>View Results</span>
           </a>
           <a href="#" class="list-group-item list-group-item-action sidebar-link">
             <i class="fas fa-box"></i>
-            <span>Products</span>
+            <span>Log Out</span>
           </a>
           <a href="#" class="list-group-item list-group-item-action sidebar-link">
             <i class="fas fa-shopping-cart"></i>
-            <span>Orders</span>
+            <span>Manage Profile</span>
           </a>
-          <a href="#" class="list-group-item list-group-item-action sidebar-link">
-            <i class="fas fa-cog"></i>
-            <span>Settings</span>
-          </a>
+         
         </div>
       </div>
       <div class="col-md-10">
