--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-student-dashboard></app-student-dashboard>
+<!-- <app-student-dashboard></app-student-dashboard> -->
+<app-examination></app-examination>
