--- a/src/app/examination/examination.component.html
+++ b/src/app/examination/examination.component.html
@@ -6,8 +6,16 @@
         <div class="col-3" style="height: 100%; border: 2px solid black">
             <!-- Content for the second column -->
         </div>
-        <div class="col-8" style="height: 100%; border: 2px solid red;">
-            <!-- Content for the third column -->
+        <div class="col-8 p-0" style="height: 100%; border: 2px solid red;">
+                <div class="col" style="height: 70%; border: 2px solid green">
+                    <!-- Content for the second column -->
+                </div>
+                <div class="col" style="height: 7%; border: 2px solid green">
+                    <!-- Content for the second column -->
+                </div>
+                <div class="col" style="height: 23%; border: 2px solid yellow">
+                    <!-- Content for the second column -->
+                </div>
         </div>
     </div>
 </div>
