--- a/src/app/examination/examination.component.html
+++ b/src/app/examination/examination.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="col-8 p-0" style="height: 100%; border: 2px solid red;">
                 <div class="col" style="height: 70%; border: 2px solid green">
-                    <!-- Content for the second column -->
+                   <app-coding-playground></app-coding-playground>
                 </div>
                 <div class="col" style="height: 7%; border: 2px solid green">
                     <!-- Content for the second column -->
