--- a/src/app/examination/coding-playground/coding-playground.component.html
+++ b/src/app/examination/coding-playground/coding-playground.component.html
@@ -1,2 +1,2 @@
 <!-- <textarea name="write your code" style="height: 100%; width: 100%;" #editor></textarea> -->
-<div #editor></div>
+<div #editor id="editorc"></div>
