--- a/src/app/examination/examination.component.html
+++ b/src/app/examination/examination.component.html
@@ -11,7 +11,7 @@
                    <app-coding-playground></app-coding-playground>
                 </div>
                 <div class="col" style="height: 7%; border: 2px solid green">
-                    <!-- Content for the second column -->
+                   <app-submit-code></app-submit-code>
                 </div>
                 <div class="col" style="height: 23%; border: 2px solid yellow">
                     <!-- Content for the second column -->
