--- a/src/app/examination/examination.component.html
+++ b/src/app/examination/examination.component.html
@@ -1,7 +1,13 @@
 <div class="container-fluid" style="height: 100vh;">
     <div class="row" style="height:100%">
         <div class="col-1 bg-primary text-white p-3" style="height: 100%;">
-            
+            <div style="height: 30%;">
+                <!-- Content for the first row (30% of col height) -->
+                <h2 class="text-white">30:00</h2>
+              </div>
+              <div style="height: 70%; overflow-y: auto;">
+                Q.1 
+              </div>
         </div>
         <div class="col-3" style="height: 100%; border: 2px solid black">
             <!-- Content for the second column -->
