--- a/src/app/examination/examination.component.html
+++ b/src/app/examination/examination.component.html
@@ -1,18 +1,68 @@
 <div class="container-fluid" style="height: 100vh;">
-    <div class="row" style="height:100%">
-        <div class="col-1 bg-primary text-white p-3" style="height: 100%;">
-            <div style="height: 30%;">
-                <!-- Content for the first row (30% of col height) -->
-                <h2 class="text-white">30:00</h2>
-              </div>
-              <div style="height: 70%; overflow-y: auto;">
-                Q.1 
-              </div>
-        </div>
+    <div class="row" style="height: 10%;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Q.1</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 2</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 3</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 4</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 5</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 6</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 7</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 8</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 9</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 10</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 11</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 12</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 13</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 14</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 15</a>
+                    </li>
+                    <!-- Add more links as needed -->
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <div class="row" style="height:90%">
+        
         <div class="col-3" style="height: 100%; border: 2px solid black">
             <!-- Content for the second column -->
         </div>
-        <div class="col-8 p-0" style="height: 100%; border: 2px solid red;">
+        <div class="col-9 p-0" style="height: 100%; border: 2px solid red;">
                 <div class="col" style="height: 70%; border: 2px solid green">
                    <app-coding-playground></app-coding-playground>
                 </div>
