Code transfer checking

--- a/src/app/examination/examination.component.html
+++ b/src/app/examination/examination.component.html
@@ -70,7 +70,7 @@
                    <app-submit-code></app-submit-code>
                 </div>
                 <div class="col" style="height: 23%; border: 2px solid yellow">
-                    <!-- Content for the second column -->
+                    <app-output></app-output>
                 </div>
         </div>
     </div>
