--- a/src/app/examination/output/output.component.html
+++ b/src/app/examination/output/output.component.html
@@ -1,1 +1,3 @@
-<p>output works!</p>
+<div  style="height: 100%;" class="container-fluid p-0">
+    <textarea style="height: 100%; width: 100%;">{{Code}}</textarea>
+</div>
