--- a/src/app/examination/submit-code/submit-code.component.html
+++ b/src/app/examination/submit-code/submit-code.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid">
     <div class="row button-container">
       <div class="col-2">
-        <button type="button" class="btn btn-success">Run Code</button>
+        <button type="button" class="btn btn-success" (click)="runCode()">Run</button>
       </div>
-      <div class="col-2">
+      <div class="col-8">
         <button type="button" class="btn btn-primary">Submit Answer</button>
       </div>
-      <div class="col-5">
+      <div class="col-2">
         <button type="button" class="btn btn-danger">Submit Exam</button>
       </div>
     </div>
