create exam module added

--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -24,8 +24,7 @@
       </div>
       <div class="col-md-10">
         <div class="p-3">
-          <h2>Dashboard</h2>
-          <p>Welcome to your dashboard! This is the main content area.</p>
+          <app-create-exam></app-create-exam>
         </div>
       </div>
     </div>
