--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -22,9 +22,9 @@
           </a>
         </div>
       </div>
-      <div class="col-md-10">
+      <div class="col-md-10 content">
         <div class="p-3">
-          <app-create-exam></app-create-exam>
+          <app-create-questions></app-create-questions>
         </div>
       </div>
     </div>
