--- a/src/app/student-dashboard/student-dashboard.component.html
+++ b/src/app/student-dashboard/student-dashboard.component.html
@@ -24,10 +24,9 @@
          
         </div>
       </div>
-      <div class="col-md-10">
+      <div class="col-md-10 content">
         <div class="p-3">
-          <h2>Dashboard</h2>
-          <p>Welcome to your dashboard! This is the main content area.</p>
+          <app-attend-exam></app-attend-exam>
         </div>
       </div>
     </div>
