--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-student-dashboard></app-student-dashboard>
+<!-- <app-student-dashboard></app-student-dashboard> -->
 <!-- <app-examination></app-examination> -->
 <!-- <app-admin-dashboard></app-admin-dashboard> -->
+<app-create-exam></app-create-exam>
