Registration Backend com done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <!-- <app-examination></app-examination> -->
 <!-- <app-admin-dashboard></app-admin-dashboard> -->
 <!-- <app-create-exam></app-create-exam> -->
-<app-create-questions></app-create-questions>
+<!-- <app-create-questions></app-create-questions> -->
+<router-outlet></router-outlet>
