student registration and login backend connected

--- a/src/app/home-page/student-register/student-register.component.html
+++ b/src/app/home-page/student-register/student-register.component.html
@@ -1,33 +1,39 @@
 <div class="card">
-    <div class="card-body">
-      <h5 class="card-title text-center mb-3">Student Registration</h5>
-      <form>
-        <div class="mb-2">
-          <label for="name" class="form-label">Name</label>
-          <input type="text" class="form-control" id="name" placeholder="Enter your name ">
-        </div>
-        <div class="mb-2">
-          <label for="username" class="form-label">Username</label>
-          <input type="text" class="form-control" id="username" placeholder="create a username">
-        </div>
-        <div class="mb-2">
-          <label for="email" class="form-label">Email</label>
-          <input type="email" class="form-control" id="email" placeholder="Enter a valid email">
-        </div>
-        <div class="mb-3">
-          <label for="password" class="form-label">Password</label>
-          <input type="password" class="form-control" id="password" placeholder="create a password">
-        </div>
-        <div class="mb-3">
-          <label for="cpassword" class="form-label"> Confirm Password</label>
-          <input type="password" class="form-control" id="password" placeholder="confirm password">
-        </div>
-        <div class="d-grid">
-            <button class="btn btn-success mt-2">Register</button>
-          </div>
-      </form>
-      <div class="d-grid mt-2">
-        <a routerLink="../student-login" class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover">Click here for Student Login</a>
+  <div class="card-body">
+    <h5 class="card-title text-center mb-3">Student Registration</h5>
+    <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
+      <div class="mb-2">
+        <label for="name" class="form-label">Name</label>
+        <input type="text" class="form-control" id="name" formControlName="student_name" placeholder="Enter your name">
       </div>
+      <div class="mb-2">
+        <label for="username" class="form-label">Username</label>
+        <input type="text" class="form-control" id="username" formControlName="student_user_name" placeholder="create a username">
+      </div>
+      <div class="mb-2">
+        <label for="email" class="form-label">Email</label>
+        <input type="email" class="form-control" id="email" formControlName="student_email" placeholder="Enter a valid email">
+      </div>
+      <div class="mb-3">
+        <label for="password" class="form-label">Password</label>
+        <input type="password" class="form-control" id="password" formControlName="student_password" placeholder="create a password">
+      </div>
+      <div class="mb-3">
+        <label for="cpassword" class="form-label">Confirm Password</label>
+        <input type="password" class="form-control" id="cpassword" formControlName="student_confirm_password" placeholder="confirm password">
+        <div *ngIf="registrationForm.get('student_confirm_password')?.errors?.mismatch" class="text-danger">
+          Passwords do not match
+        </div>
+      </div>
+      <div class="d-grid">
+        <button type="submit" class="btn btn-success mt-2" [disabled]="registrationForm.invalid">Register</button>
+      </div>
+    </form>
+    <div class="d-grid mt-2">
+      <a routerLink="../student-login" class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover">Click here for Student Login</a>
+    </div>
+    <div *ngIf="alertMessage" class="alert mt-3" [ngClass]="{'alert-success': alertType === 'success', 'alert-danger': alertType === 'danger'}">
+      {{ alertMessage }}
     </div>
   </div>
+</div>
