--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -24,7 +24,7 @@
       </div>
       <div class="col-md-10 content">
         <div class="p-3">
-          <app-create-questions></app-create-questions>
+          <router-outlet></router-outlet>
         </div>
       </div>
     </div>
