Add and Delete Exam implemented

--- a/src/app/admin-dashboard/create-exam/create-exam.component.html
+++ b/src/app/admin-dashboard/create-exam/create-exam.component.html
@@ -23,23 +23,24 @@
     <!-- Display Existing Exams -->
     <div class="row">
       <div class="col-md">
-        <!--Dynamic Card--->
+        <!--Dynamic Card-->
         <div class="card mb-3" *ngFor="let exam of examService.exams; let i = index">
           <div class="card-header">
-            <h5 class="card-title">{{ exam.examName }}</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Exam ID: #{{ exam.examId }}</h6>
+            <h5 class="card-title">{{ exam.exam_name }}</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Exam ID: # {{ exam.exam_id }}</h6>
           </div>
           <div class="card-body">
-            <p>Total Questions: N/A</p>
-            <p>Total Time: {{ exam.totalTime }} minutes</p>
-            <p>Due Date: {{ exam.attendBeforeDate | date }}</p>
+            <p>Total Questions: {{exam.exam_total_questions}}</p>
+            <p>Total Time: {{ exam.exam_total_time }} minutes</p>
+            <p>Due Date: {{ exam.exam_due_date | date }}</p>
           </div>
           <div class="card-footer">
-            <button class="btn btn-danger btn-sm float-start" (click)="deleteExam(exam.examId)">Delete Exam</button>
+            <button class="btn btn-danger btn-sm float-start" (click)="deleteExam(exam.exam_id)">Delete Exam</button>
             <button class="btn btn-primary btn-sm float-end">Add Questions</button>
             <div class="clearfix"></div>
           </div>
         </div>
+      </div>
         <!-- Sample Card -->
         <div class="card mb-3">
           <div class="card-header">
@@ -95,4 +96,3 @@
           </div>
       </div>
     </div>
-  </div>
