--- a/src/app/student-dashboard/attend-exam/attend-exam.component.html
+++ b/src/app/student-dashboard/attend-exam/attend-exam.component.html
@@ -1,16 +1,15 @@
 <div class="container">
-    <div class="card text-center">
-      <div class="card-header">
-        Enter Exam Code to Attend
-      </div>
-      <div class="card-body">
-        <form>
-          <div class="form-group">
-            <input type="text" class="form-control form-control-md mt-5" placeholder="Enter Exam Code">
-          </div>
-          <button type="submit" class="btn btn-primary btn-lg mt-5">Attend</button>
-          <div class="alert alert-primary fade show mt-5" role="alert">Hello I am here</div> 
-        </form>
+  <div class="card text-center">
+    <div class="card-header">Enter Exam Code to Attend</div>
+    <div class="card-body">
+      <form>
+        <div class="form-group">
+          <input type="text" class="form-control form-control-md mt-5" placeholder="Enter Exam Code" [(ngModel)]="examCode" name="examid">
+        </div>
+        <button type="button" class="btn btn-primary btn-lg mt-5" (click)="checkAttendance()">Attend</button>
+        <div class="alert alert-primary fade show mt-5" role="alert">{{ message }}</div>
+      </form>
     </div>
+  </div>
 </div>
  
