--- a/src/app/student-dashboard/attend-exam/attend-exam.component.html
+++ b/src/app/student-dashboard/attend-exam/attend-exam.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="card text-center">
-    <div class="card-header">Enter Exam Code to Attend</div>
+    <div class="card-header">Enter Exam Code to Attend {{this.student.studentID}}</div>
     <div class="card-body">
       <form>
         <div class="form-group">
