--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -3,13 +3,14 @@
       <div class="col-md-2 sidebar p-0">
         <div class="container">
             <H3>Welcome Admin</H3>
+            <h6>Admin Id: {{this.admin.getAdminId()}}</h6>
         </div>
         <div class="list-group">
-          <a href="#" class="list-group-item list-group-item-action sidebar-link active">
+          <a  class="list-group-item list-group-item-action sidebar-link active">
             <i class="fas fa-tachometer-alt"></i>
             <span>Create Exam</span>
           </a>
-          <a href="#" class="list-group-item list-group-item-action sidebar-link">
+          <a class="list-group-item list-group-item-action sidebar-link">
             <i class="fas fa-users"></i>
             <span>View Results</span>
           </a>
