--- a/src/app/admin-dashboard/create-exam/create-exam.component.html
+++ b/src/app/admin-dashboard/create-exam/create-exam.component.html
@@ -19,7 +19,7 @@
       </form>
     </div>
     <hr>
-  
+    <h2 class="my-4">Exam Details</h2>
     <!-- Display Existing Exams -->
     <div class="row">
       <div class="col-md">
