--- a/src/app/student-dashboard/student-dashboard.component.html
+++ b/src/app/student-dashboard/student-dashboard.component.html
@@ -3,6 +3,7 @@
       <div class="col-md-2 sidebar p-0">
         <div class="container">
             <H3>Welcome Student</H3>
+            <h6>Student Id:- {{this.student.studentID}}</h6>
         </div>
         <div class="list-group">
           <a href="#" class="list-group-item list-group-item-action sidebar-link active">
