--- a/src/app/examination/examination.component.html
+++ b/src/app/examination/examination.component.html
@@ -8,7 +8,7 @@
             </li>
             <ng-container *ngIf="exam">
               <li class="nav-item" *ngFor="let question of exam.coding_questions; let i = index">
-                <a class="nav-link text-white" style="cursor: pointer;" (click)="currentQuestionIndex = i">Q.{{ i + 1 }}</a>
+                <a class="nav-link text-white" style="cursor: pointer;" (click)="changeQuestionIndex(i)">Q.{{ i + 1 }}</a>
               </li>
             </ng-container>
           </ul>
