some alert experiment

--- a/src/app/examination/output/output.component.css
+++ b/src/app/examination/output/output.component.css
@@ -3,3 +3,23 @@ textarea {
   color: white; /* White text color */
   padding: 1px; /* Add some padding for better readability */
 }
+.container-fluid{
+  position: relative;
+}
+.alert {
+  position: absolute;
+  top: 20px;
+  right: 150px;
+  background-color: #ff9800;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 4px;
+  z-index: 2;
+}
+
+.close-btn {
+  float: right;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+}
