--- a/src/app/home-page/student-login/student-login.component.html
+++ b/src/app/home-page/student-login/student-login.component.html
@@ -22,4 +22,5 @@
       {{ alertMessage }}
     </div>
   </div>
+  <app-floating-alert [type]="'danger'" [message]="'Error While making Connection'" [top]="10" [right]="200"></app-floating-alert>
 </div>
